# mcp-fuzzer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  debug_vulnerable_server.py  pyproject.toml  scan_mcp_server.py  test_vulnerable_detection.py
docs/: IMPLEMENTATION_COMPLETE.md  PROJECT_SUMMARY.md  PUBLISHING_TO_PYPI.md  v1.0.1_IMPROVEMENTS.md
examples/: basic_usage.py  focused_testing.py
mcp_fuzzer/: __init__.py  analyzer.py  cli.py  fuzzer.py  payloads.py
tests/: test_analyzer.py  test_payloads.py  vulnerable_test_server.py
