[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-fuzzer"
version = "1.0.0"
description = "Runtime security testing for Model Context Protocol servers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Credence Security", email = "security@credence.dev"}
]
keywords = [
    "mcp",
    "security",
    "fuzzing",
    "testing",
    "model-context-protocol",
    "vulnerability-scanner",
    "penetration-testing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking",
]

dependencies = [
    "mcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/credence-security/mcp-fuzzer"
Documentation = "https://github.com/credence-security/mcp-fuzzer#readme"
Repository = "https://github.com/credence-security/mcp-fuzzer"
"Bug Tracker" = "https://github.com/credence-security/mcp-fuzzer/issues"

[project.scripts]
mcp-fuzzer = "mcp_fuzzer.cli:cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_fuzzer*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
